using ECommerceApp.Entities;

namespace ECommerceApp.Repositories.Interfaces
{
    public interface IProductRepository
    {
        Task<bool> ExistsByNameAsync(string name, int? excludeProductId = null);
        
        Task<Product?> GetByIdAsync(int id, bool trackChanges = false);
        
        Task<Product?> GetByIdIncludingUnavailableAsync(int id, bool trackChanges = false);
        
        Task<List<Product>> GetByIdsAsync(IEnumerable<int> ids, bool trackChanges = false);
        
        Task<List<Product>> GetAllAsync();
        Task<List<Product>> GetByCategoryAsync(int categoryId);
        
        IQueryable<Product> QueryAllAvailable();
        IQueryable<Product> QueryByCategory(int categoryId);
        
        void Add(Product product);
        void Update(Product product);
        
        Task<bool> DeductStockAsync(int productId, int quantity);
    }
}